# 2021-Capstone-Design

./: README.md
Modeling/: Battery_decorate.SLDPRT  Down_switch.SLDPRT  Encoder_motor_part_all.SLDPRT  Encoder_motor_part_left.SLDPRT  Encoder_motor_part_right.SLDPRT  Upper_switch.SLDPRT  board_part.SLDPRT  innner_encoder.SLDPRT  lil part.SLDPRT
ROS_Package/src/convert_2d_to_3d/: CMakeLists.txt  README.md  package.xml
ROS_Package/src/convert_2d_to_3d/launch/: control_input.launch
ROS_Package/src/convert_2d_to_3d/msg/: Result.msg  robot_pose.msg
ROS_Package/src/convert_2d_to_3d/rviz/: normalvector.rviz
ROS_Package/src/convert_2d_to_3d/src/: controller_input.cpp  generate_msg.cpp
ROS_Package/src/darknet_ros/darknet/: Makefile
ROS_Package/src/darknet_ros/darknet_ros/: CMakeLists.txt
ROS_Package/src/omni_bot_msg/: CMakeLists.txt  package.xml
ROS_Package/src/omni_bot_msg/msg/: omnibot.msg
ROS_Package/src/stm32_serial_comm/: CMakeLists.txt  package.xml
ROS_Package/src/stm32_serial_comm/launch/: test.launch  total.launch
STM32_Cortex-M4/: .mxproject  Capston_Omni-Driving.ioc
STM32_Cortex-M4/EWARM/: Capston_Omni-Driving.dep  Capston_Omni-Driving.ewd  Capston_Omni-Driving.ewp  Project.eww
STM32_Cortex-M4/EWARM/settings/: Capston_Omni-Driving.Capston_Omni-Driving.cspy.bat  Capston_Omni-Driving.dbgdt  Capston_Omni-Driving.dni  Project.wsdt  Project.wspos
STM32_Cortex-M4/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32_Cortex-M4/Src/: main.c  main.c~RF1f2240a4.TMP  main.c~RF79858b36.TMP  stm32f4xx_hal_msp.c  stm32f4xx_it.c
(+17 files in other folders)
